--- a/index.html
+++ b/index.html
@@ -8,12 +8,12 @@
   <!--lambdaCalc dual inputFields; accepts the two numbers to perform calcFunctions on-->
   <div>
     <label>inputNumber:</label>
-    <input id="input1" type="text">
+    <input id="inputUno" type="text">
   </div>
   <br>
   <div>
     <label>inputNumber:</label>
-    <input id="input2" type="text">
+    <input id="inputDos" type="text">
   </div>
   <br>
 
@@ -28,6 +28,6 @@
   <div id="outputField"></div>
 
 
-  <script type="text/javascript" src="javascripts/calculator.js"></script>
+  <script type="text/javascript" src="js/calculator.js"></script>
 </body>
 </html>
