--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <title>lambdaCalc</title>
 </head>
 <body>
-  <!--lambdaCalc dual inputFields; accepts the two numbers to perform calcFunctions on-->
+  
   <div>
     <label>inputNumber:</label>
     <input id="inputUno" type="text">
@@ -17,7 +17,6 @@
   </div>
   <br>
 
-  <!--4 buttons: add/subtract/multiply/divide-->
   <div id="calcFunctions">
     <button id="add">Add</button>
     <button id="subtract">Subtract</button>
@@ -25,7 +24,7 @@
     <button id="divide">Divide</button>
   </div>
 
-  <div id="outputField"></div>
+  <h2><div id="outputField"></div></h2>
 
 
   <script type="text/javascript" src="js/calculator.js"></script>
